--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,7 @@
+body{
+    background: linear-gradient(silver,grey);
+}
+
 form{
     padding:1em;
     display:flex;
@@ -5,10 +9,9 @@ form{
     justify-content: center;
     border: 3px solid silver;
     background: rgb(148, 94, 88);
-    flex-wrap: wrap;
     align-items:center;
     width:50%;
-    margin:auto;
+    margin:1em auto;
     box-shadow: 2px 2px 10px grey;
     border-radius:20px;
 }
@@ -17,8 +20,16 @@ form{
     margin-top:.1em;
     color:white;
     font-size:1.2em;
-        
 }
+
+form:nth-of-type(2){
+    background-color: tan;
+}
+form:hover{
+    opacity:0.9;
+    cursor:pointer;
+}
+
 label{
     display: block;
     text-shadow:2px 2px 2px black;
@@ -41,5 +52,5 @@ select{
     margin:0 auto;
 }
 input:focus{
-    border:3px solid steelblue;
+    border:3px solid black;
 }
